2018-09-02  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml, ext/oci8/bind.c, ext/oci8/stmt.c,
	  lib/oci8/bindtype.rb, test/test_oci8.rb: Rewrite OCI8::BindType::Long
	    and OCI8::BindType::LongRaw to handle up to 2 gigabyte data using
	    dynamically allocated buffers.

2018-08-22  Kubo Takehiro <kubo@jiubao.org>
	* NEWS: Add changes between 2.2.5.1 and 2.2.6
	* lib/oci8/version.rb: Update to 2.2.6
	* mkpkg-win32.rb: Don't test with self-build ruby 2.4.

2018-08-22  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/oci8lib.c: Load a Oracle client library which doesn't have
	    version number suffix also on Unix when runtime-check is enabled.
	    Oracle version numbers are incremented yearly sice Oracle 18c.

2018-08-22  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/hook_funcs.c, ext/oci8/win32.c: Suppress warnings:
	   "'raise_error' defined but not used" and "'strncpy' specified
	   bound 512 equals destination size".

2018-08-19  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/hook_funcs.c: Not depend on Oracle version number
	   of Oracle client file name suffix when hooking functions.
	   (rsim/oracle-enhanced#1754)
	* test/test_all.rb, test/test_properties.rb, dist-files:
	   Add tests for hooking.

2018-08-18  Kubo Takehiro <kubo@jiubao.org>
	* test/test_oci8.rb: Fix to pass a test when the client is 11g
	    and the server is 18c. client_driver in v$session_connect_info
	    has an extra space at the end.

2018-08-18  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/apiwrap.rb, ext/oci8/apiwrap.yml, ext/oci8/oci8.c,
	  ext/oci8/oci8.h, lib/oci8/oci8.rb, lib/oci8/oracle_version.rb,
	  test/test_oci8.rb: Fix OCI8#oracle_server_version to get
	    full version of Oracle 18c.

2018-08-18  Kubo Takehiro <kubo@jiubao.org>
	* lib/oci8/metadata.rb: Update doc comments of OCI8::Metadata::ArgBase#level
	    and OCI8::Metadata::ArgBase#arguments.
	* test/test_package_type.rb, lib/oci8.rb: Fix to pass tests on Oracle 18c.